vote/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres-service
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: postgres
