vote/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  type: ClusterIP
  ports:
    - name: redis-service
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
