vote/vote-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
spec:
  type: LoadBalancer
  ports:
    - name: vote-service
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: vote
