vote/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: vote
  name: vote
spec:
  ingressClassName: nginx
  rules:
    - host: vote.caglargokcen.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vote-service
                port:
                  number: 80
